--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ clap = "3.0.12"
 shell-escape = "0.1.5"
 notify = "4"
 regex = "1.5.4"
+nix = "0.23.1"
+command-group = "1.0.8"
+glob = "0.3.0"
+ignore = "0.4.18"
+ctrlc = "3.2.1"
