--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ name = "watchexec"
 path = "src/main.rs"
 
 [dependencies]
-clap = "3.0.12"
+clap = "3"
 shell-escape = "0.1.5"
 notify = "4"
 regex = "1.5.4"
@@ -20,3 +20,5 @@ command-group = "1.0.8"
 glob = "0.3.0"
 ignore = "0.4.18"
 ctrlc = "3.2.1"
+clearscreen = "1.0.9"
+signal-hook = "0.3.13"
