--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "watchexec-simple"
 version = "0.1.0"
 edition = "2021"
 default-run = "watchexec"
+license = "MIT"
+description = "An alternative to watchexec"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
