--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,15 @@ name = "watchexec"
 path = "src/main.rs"
 
 [dependencies]
-clap = "3"
+clap = { version = "4.4.6", features = ["derive"]}
 shell-escape = "0.1.5"
-notify = "4"
+notify = "4.0.17"
 regex = "1.5.4"
-nix = "0.23.1"
-command-group = "1.0.8"
+command-group = "2.1.0"
 glob = "0.3.0"
 ignore = "0.4.18"
 ctrlc = "3.2.1"
-clearscreen = "1.0.9"
+clearscreen = "2.0.1"
 signal-hook = "0.3.13"
+tracing-subscriber = "0.3.17"
+tracing = "0.1.40"
